--- a/{{cookiecutter.repo_name}}/{{cookiecutter.project_name}}/templates/users/user_detail.html
+++ b/{{cookiecutter.repo_name}}/{{cookiecutter.project_name}}/templates/users/user_detail.html
@@ -1,5 +1,4 @@
 {% raw %}{% extends "base.html" %}
-{% load avatar_tags %}
 {% load static %}
 
 {% block title %}User: {{ object.username }}{% endblock %}
@@ -19,9 +18,8 @@
 <div class="row">
 
   <div class="col-sm-12 ">
-    <a class="btn btn-primary" href="{% url 'users:update' %}">My Info</a>
-    <a class="btn btn-primary" href="{% url 'account_email' %}">E-Mail</a>
-    <a class="btn btn-info" href="{% url 'avatar_change' %}">Avatar</a>
+    <a class="btn btn-primary" href="#">My Info</a>
+    <a class="btn btn-primary" href="#">E-Mail</a>
     <!-- Your Stuff: Custom user template urls -->
   </div>
 
