--- a/{{cookiecutter.repo_name}}/{{cookiecutter.project_name}}/templates/users/user_form.html
+++ b/{{cookiecutter.repo_name}}/{{cookiecutter.project_name}}/templates/users/user_form.html
@@ -1,5 +1,4 @@
 {% raw %}{% extends "base.html" %}
-{% load crispy_forms_tags %}
 
 {% block title %}User: {{ user.username }}{% endblock %}
 
@@ -11,7 +10,7 @@
             <h1>{% block header %}User: {{ user.username }}{% endblock %}</h1>
             <form class="form-horizontal" method="post" action="{% url 'users:update' %}">
                 {% csrf_token %}
-                {{ form|crispy }}
+                {{ form }}
                 <div class="control-group">
                   <div class="controls">
                     <button type="submit" class="btn">Update</button>
