--- a/{{cookiecutter.repo_name}}/{{cookiecutter.project_name}}/templates/users/user_list.html
+++ b/{{cookiecutter.repo_name}}/{{cookiecutter.project_name}}/templates/users/user_list.html
@@ -1,6 +1,5 @@
 {% raw %}{% extends "base.html" %}
 {% load static %}{% load i18n %}
-{% load avatar_tags %}
 
 {% block title %}Members{% endblock %}
 
@@ -19,8 +18,7 @@
       <div class="list-group">
           {% for user in user_list %}
             <a href="{% url 'users:detail' user.username %}" class="list-group-item">
-              <h4 class="list-group-item-heading">{% avatar user %} {{ user.username }}</h4>
-              <p class="list-group-item-text">{{ maker.tagline }}</p>
+              <h4 class="list-group-item-heading">{{ user.username }}</h4>
             </a>
           {% endfor %}
         
